fixed nav links visible and menu icon invisible on ipad and desktop

--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,6 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* border: 3px solid yellowgreen; */
-
   float: left;
   display: block;
   text-align: center;
@@ -65,26 +63,14 @@ nav a {
   text-decoration: none;
   font-size: 14px;
   color: #0d4269;
-  /* line-height: 20; */
 }
 
-/* * Change the color of links on hover */
+/* Change the color of links on hover */
 nav a:hover {
-  background-color: #ddd;
-  color: black;
   cursor: pointer;
 }
 
-/* Add an active class to highlight the current page */
-/* nav a.active {
-    background-color: #4CAF50;
-    color: white;
-} */
-
 /* Hide the link that should open and close the topnav on small screens */
-nav .icon {
-  display: none;
-}
 
 nav #logo {
   width: 114px;
@@ -110,7 +96,7 @@ nav #logo {
     box-shadow: 0px -5px 5px -5px #0000002c;
   }
 
-  nav a.icon {
+  nav i {
     float: right;
     display: block;
   }
@@ -135,7 +121,7 @@ nav #logo {
         will-change: transform; */
   }
 
-  nav.responsive a.icon {
+  nav.responsive i {
     position: absolute;
     right: 0;
     top: 0;
@@ -151,13 +137,15 @@ nav #logo {
 /* -----HEADER STYLING----------- */
 
 header {
-  background: transparent
-    url("../images/luis-quintero-Fpyn4zHIxEU-unsplash.png") 0% 0% no-repeat
-    padding-box;
+  background-image: url("../images/luis-quintero-Fpyn4zHIxEU-unsplash.png");
+  background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   opacity: 1;
   height: 330px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-flow: column;
   margin: 0;
@@ -363,7 +351,22 @@ header {
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   header {
-    height: 80vh;
+    min-height: 60vh;
+    border: 3px solid green;
+    font-size: 28px;
+    width: 100%;
+    background-image: url("../images/luis-quintero-Fpyn4zHIxEU-unsplash@2x.png");
+    opacity: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  #gradient-div {
+    /* border: 3px solid yellow; */
+    height: 30%;
+    width: calc(100vw-45px);
+    padding: 25px 45px;
   }
 
   header h1 {
@@ -397,11 +400,26 @@ header {
     padding-right: 10px;
     padding-left: 10px;
   }
+
+  /* #icon-navbar {
+    display: none;
+  } */
+
+  nav i,
+  i,
+  #icon-navbar,
+  nav #icon-navbar-container {
+    display: none;
+  }
 }
 
 /* ------MEDIA QUERIES FOR DESKTOP COMPUTERS------ */
 
 @media only screen and (min-device-width: 1025px) {
+  #icon-navbar {
+    display: none;
+  }
+
   header {
     min-height: 100vh;
     /* border: 3px solid green; */
